--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="600dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -75,7 +75,7 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkBox"
+                android:id="@+id/UB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="false"
