--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,9 +49,9 @@
             android:textColor="#000000" />
 
         <RadioGroup
+            android:id="@+id/Jk"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.36">
+            android:layout_height="wrap_content">
 
             <RadioButton
                 android:id="@+id/male"
@@ -66,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="Perempuan" />
+        </RadioGroup>
 
             <TextView
                 android:id="@+id/textView2"
@@ -94,7 +95,6 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="Lure Module" />
-        </RadioGroup>
 
         <CheckBox
             android:id="@+id/LE"
@@ -120,6 +120,8 @@
             android:id="@+id/hsl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hasil" />
+            android:text="Hasil"
+            android:textColor="#000000"
+            android:textSize="14dp" />
     </LinearLayout>
 </ScrollView>
